@@ -1809,6 +1809,14 @@ void DOSBOX_SetupConfigSections(void) {
     Pbool->Set_help("If set, INT 10h points at the VGA BIOS. If clear, INT 10h points into the system BIOS. This option only affects EGA/VGA/SVGA emulation.\n"
                     "This option is needed for some older DOS applications that make additional checks before detecting EGA/VGA hardware (SuperCalc).");
 
+    Pbool = secprop->Add_bool("vesa bank switching window mirroring",Property::Changeable::Always,false);
+    Pbool->Set_help("If set, bank switch (windowed) VESA BIOS modes will ignore the window selection when asked\n"
+                    "to bank switch. Requests to control either Window A or Window B will succeed. This is needed\n"
+                    "for some demoscene productions with SVGA support that assume Window B is available, without\n"
+                    "which graphics do not render properly.\n"
+                    "If clear, Window B is presented as not available and attempts to use it will fail. Only Window A\n"
+                    "will be available, which is also DOSBox SVN behavior.");
+
     Pbool = secprop->Add_bool("vesa zero buffer on get information",Property::Changeable::Always,true);
     Pbool->Set_help("This setting affects VESA BIOS function INT 10h AX=4F00h. If set, the VESA BIOS will zero the\n"
                     "256-byte buffer defined by the standard at ES:DI, then fill in the structure. If clear, only\n"
